Name:                pathfindingcore
Version:             0.1
Cabal-version:       >=1.16.0
License:             BSD3
License-File:        LICENSE.txt
Author:              Jason Bertsche
Maintainer:          jason.bertsche@gmail.com
Homepage:            http://github.com/TheBizzle
Category:            Demo
Synopsis:            A toy pathfinding library
Build-type:          Simple

source-repository head
  type:     git
  location: git@github.com:TheBizzle/PathFindingCore-Haskell.git

library
  hs-source-dirs:   src
  exposed-modules:  PathFindingCore.Coordinate, PathFindingCore.PathingMap.Direction
  build-depends:    base
  default-language: Haskell2010
