Name:                pathfindingcore
Version:             0.1
Cabal-version:       >=1.16.0
License:             BSD3
License-File:        LICENSE.txt
Author:              Jason Bertsche
Maintainer:          jason.bertsche@gmail.com
Homepage:            http://github.com/TheBizzle
Category:            Demo
Synopsis:            A toy pathfinding library
Build-type:          Simple

source-repository head
  type:     git
  location: git@github.com:TheBizzle/PathFindingCore-Haskell.git

library
  hs-source-dirs:   src
  exposed-modules:  PathFindingCore.PathingMap, PathFindingCore.PathingStatus, PathFindingCore.StepData, PathFindingCore.PathingMap.Coordinate, PathFindingCore.PathingMap.Direction, PathFindingCore.PathingMap.Terrain, PathFindingCore.PathingMap.Interpreter
  default-language: Haskell2010
  build-depends:
    array == 0.4.0.1,
    base,
    split == 0.2.2
